<resources>
    <string name="app_name">MyApp</string>
    <string name="mensaje">Hola mundo</string>
    <string name="saludo">Hola Didier</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="boton">Cambiar dato</string>
    <string name="dato">Ingresar dato</string>
    <string name="inicioSesion">Iniciar Sesión</string>
    <string name="acercaDe">Acerca de</string>
    <string name="siguiente">Siguiente</string>
</resources>

